jitfailure-dolfin_expression_820ff00fb6dfbb522d28baf620901224/error.log
/tmp/tmph0_aulie/dolfin_expression_820ff00fb6dfbb522d28baf620901224.cpp: In member function ‘virtual void dolfin::dolfin_expression_820ff00fb6dfbb522d28baf620901224::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmph0_aulie/dolfin_expression_820ff00fb6dfbb522d28baf620901224.cpp:62:28: error: ‘ap’ was not declared in this scope
           values[0] = -2 * ap*ap*ap*hp*x[0]/(pow(x[0]*x[0] + ap*ap, 2)) ;
                            ^~
/tmp/tmph0_aulie/dolfin_expression_820ff00fb6dfbb522d28baf620901224.cpp:62:28: note: suggested alternative: ‘hp’
           values[0] = -2 * ap*ap*ap*hp*x[0]/(pow(x[0]*x[0] + ap*ap, 2)) ;
                            ^~
                            hp
